<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pojo.started.WelcomeActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:text="@string/welcome_to_universe"
        android:textSize="38sp"
        android:textColor="@color/blueNight"
        android:fontFamily="@font/productsans_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/wel_description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/productsans_regular"
        android:text="@string/can_receive_notifications_about_your_university_news"
        android:textColor="@color/gray_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/btn_join_member"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/productsans_medium"
        android:text="@string/join"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_welcome_to_signin"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/productsans_medium"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_join_member"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/ask_university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/productsans_regular"
        android:text="@string/do_you_want_to_create_university_account"
        android:textColor="@color/gray_1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_welcome_to_signin" />

    <TextView
        android:id="@+id/btn_join_university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="78dp"
        android:fontFamily="@font/productsans_regular"
        android:text="@string/create_university_account"
        android:textColor="@color/blue_1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ask_university" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="287dp"
        android:layout_height="276dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wel_description"
        app:srcCompat="@drawable/ic_mobile_login"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>