<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pojo.started.resetEmailActivity">

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/productsans_medium"
        android:text="@string/forgetpassword"
        android:textColor="@color/blue_1"
        android:textSize="38sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_btn_resetEmail_to_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:background="#00FFFFFF"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:src="@drawable/ic_back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/des" />

    <TextView
        android:id="@+id/forgetpassword_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/productsans_regular"
        android:text="@string/forgetpassworddes"
        android:textColor="@color/gray_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_password"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/gray_1"
        app:hintTextColor="@color/gray_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetpassword_desc"
        app:startIconDrawable="@drawable/ic_email_icon">

        <EditText
            android:id="@+id/email_input_reset_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/productsans_medium"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>